# mlops-environment

./: README.md  airflow.cfg  docker-compose.yml
.github/workflows/: KICKS.yml  build.yml  deploy.yml  push.yml
api-examples/iris/: Dockerfile  pyproject.toml  run.py
dags-examples/: train_model_boston.py  train_model_iris.py
dockerfiles-build/airflow/: Dockerfile  requirements.txt
dockerfiles-build/jupyter/: Dockerfile
prometheus/volume/01GZCFYRBXC3T00WSEHAE4SC7F/: index  meta.json
prometheus/volume/01GZCFYRBXC3T00WSEHAE4SC7F/chunks/: 000001
prometheus/volume/01GZVD3VVE33W0NVNMYEP5AY2J/: index  meta.json
prometheus/volume/01GZVD3VVE33W0NVNMYEP5AY2J/chunks/: 000001
prometheus/volume/01GZVPWY6G5MXAEGZP8E57RKM3/: index  meta.json
prometheus/volume/01GZVPWY6G5MXAEGZP8E57RKM3/chunks/: 000001
prometheus/volume/01GZWCABM0VBB3245CRTPMVBK6/: index  meta.json
prometheus/volume/01GZWCABM0VBB3245CRTPMVBK6/chunks/: 000001
prometheus/volume/01GZYM2DH2DQYHCGCZAA07YJ4E/: index  meta.json
prometheus/volume/01GZYM2DH2DQYHCGCZAA07YJ4E/chunks/: 000001
prometheus/volume/01GZYM2HKXQM8CZFFDYTS5ZFVR/: index  meta.json
prometheus/volume/01GZYM2HKXQM8CZFFDYTS5ZFVR/chunks/: 000001
prometheus/volume/chunks_head/: 000010  000011
prometheus/volume/wal/: 00000030  00000031  00000032
prometheus/volume/wal/checkpoint.00000029/: 00000000
